--- a/src/app/Components/gift-meals-individual/gift-meals-individual.component.html
+++ b/src/app/Components/gift-meals-individual/gift-meals-individual.component.html
@@ -182,7 +182,7 @@
                             <button [disabled]="giftMealsFrm.invalid"
                             id="gft-pymnt-btn" 
                             class="btn btn-primary btn-lg btn-block text-uppercase" 
-                            type="submit">go to payment</button>
+                            type="submit" routerLink="/Home">go to payment</button>
                         </div>
 
                     </form>
