--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -145,7 +145,7 @@
                                     <input type="text"  formControlName="restaurantName"
                                      class="form-control search-hm" 
                                      id="inlineFormInputGroupUsername" 
-                                     placeholder="Find a restaurant" autocomplete="off" required>
+                                     placeholder="eg: KFC, Zack's, McDonald's, Gambarina Hago " autocomplete="off" required>
                                     
                                     <div class="input-group-append search-hm">
                                         <div class="input-group-text" style="background-color: white;"><i class="fas fa-search"></i></div>
