--- a/src/app/Components/pastorderdetails/pastorderdetails.component.html
+++ b/src/app/Components/pastorderdetails/pastorderdetails.component.html
@@ -3,7 +3,7 @@
     <!-- order details header -->
     <div class="order-header">
         <div>
-            <button class="reorder-btn" id="reorder-btn">Reorder</button>
+            <button class="reorder-btn" id="reorder-btn" routerLink="/trackOrder">Reorder</button>
         </div>
         <!-- order image -->
         <img class="rest-image" id="rest-image" src={{selectedOrder.restaurantImage}}
