--- a/src/app/Components/track-order/track-order.component.html
+++ b/src/app/Components/track-order/track-order.component.html
@@ -126,7 +126,7 @@
           </div>
         </div>
       </div>
-      <a href="#" class="btn btn-warning" style="float: left;" data-abc="true">Back to restaurants</a>
+      <a routerLink="/delivery" class="btn btn-warning" style="float: left;" data-abc="true">Back to restaurants</a>
       <button href="#" class="btn btn-warning" onclick="document.getElementById('id01').style.display='block'" style="float: right;" data-abc="true">Cancel my order</button>
 
       <div id="id01" class="modal">
