--- a/src/app/Components/gift-meals/gift-meals.component.html
+++ b/src/app/Components/gift-meals/gift-meals.component.html
@@ -11,10 +11,10 @@
         <hr>
         <p>We listened to your requests and launched elmenus GiftMeals, a simple way for you to share promos with friends or teams at work so everyone can enjoy great food wherever they are.</p>
         <div class="actions" style="justify-content: center;">
-          <button class="btn btn-primary col-lg-6 col-md-6 col-xs-12">
+          <button routerLink="/Giftmeals-individual" class="btn btn-primary col-lg-6 col-md-6 col-xs-12">
             Send Gifts to your teams
           </button>
-          <button class="btn btn-outline col-lg-6 col-md-6 col-xs-12">
+          <button routerLink="/Giftmeals-individual" class="btn btn-outline col-lg-6 col-md-6 col-xs-12">
             Send Gifts to your friends
           </button>
         </div>
