--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -123,8 +123,8 @@
                   <div class="form-group">
                     <input type="password" class="form-control" id="pwd" style="font-size: 15px; height: 40px !important;" placeholder="password" name="pswd">
                   </div>
-                  <button (click)="login()" type="button" id="modal_login" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 18px;">Login</button>
-                  <button (click)="login()" type="button" class="btn btn-block" style="background-color: #4267B2; color: white; font-size: 15px;">Continue With FaceBook</button>
+                  <button type="button" id="modal_login" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 18px;">Login</button>
+                  <button type="button" class="btn btn-block" style="background-color: #4267B2; color: white; font-size: 15px;">Continue With FaceBook</button>
                   <span style="font-size: 15px; margin-top: 10%; margin-left: 30%; color: #E5533A;">forget password?</span>
                 </div>
             <!--------------------------------------------->
@@ -138,7 +138,7 @@
                   <div class="form-group">
                     <input type="password" class="form-control" id="pwd2" style="font-size: 15px; height: 40px !important;" placeholder="password" name="pswd">
                   </div>
-                  <button (click)="login()" type="button" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 18px;">Create Account</button>
+                  <button type="button" class="btn btn-block" style="background-color: #E5533A; color: white; font-size: 18px;">Create Account</button>
                   <span style="font-size: 13px;text-align: center;color: rgb(207, 188, 188); ">By creating an account, you agree to our Terms</span>
                 </div>
         </div>
