--- a/src/app/Components/dine-out/dine-out.component.html
+++ b/src/app/Components/dine-out/dine-out.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
+<h1 class="page-title text-center hidden-xs mt-5"><strong>Discover restaurants to dine-out</strong></h1>
+
 <div class="container-fluid">
   <!-------------------------->
   <br><br><br>
@@ -45,69 +47,70 @@
   <div class="container pl-3">
 
     <!--			 Discover by dishes-->
-    <h4 class="ml-4"> Discover by dishes</h4>
+    <h2 class="ml-4"> Discover by dishes</h2>
 
-    <div class="col-sm-1 ml-4 mt-4">
-      <button style="width: 35px;height: 35px; margin-top: 20%;" class="btn btn-danger rounded-circle" type="button"><i class="fas fa-angle-left"></i>
-      </button>
+    <div class="container">    
+      <h1 class="row">
+    
+        <div class="card col-lg-3" style="margin-left: 7%; margin-top:40px;"
+          *ngFor="let item of restaurantsList">
+          <img class="card-img-top mt-2" src="{{item.restaurantFeaturedPhotos}}"  style="width: 100%; height: 250px;" alt="">
+          <div class="card-body">
+            <h6>Location: <strong>{{item.restaurantBranchs[0]}}</strong></h6>
+            <h6>Phone: <strong>{{item.restaurantPhone}}</strong></h6>
+            <h6>From: <strong>{{item.restaurantOpening}}</strong> To: <strong>{{item.restaurantClosing}}</strong></h6>
+            <h6>Type: <strong>{{item.restaurantType}}</strong></h6>
+    
+          </div>
+        </div>
+    
+      </h1>
     </div>
-
-    <div class="row d-flex justify-content-center">
-      <div class="col-sm-2" *ngFor="let item of restaurantsList">
-        <img src="{{item.restaurantFeaturedPhotos}}" class="img-fluid" height="auto" width="100%">
-      </div>
-      
-      <div class="col-sm-1 ml-4 mt-4">
-        <button style="width: 35px;height: 35px; margin-top: 20%;" class="btn btn-danger rounded-circle" type="button"><i class="fas fa-angle-right"></i>
-        </button>
-      </div>
-    </div>
+    
+    
     <br><br>
 
 
-    <!--			Discover Agouza-->
+    <!--			Discover Location-->
 
-    <h3 class="mt-5">Discover Agouza</h3>
-    <div class="row">
-      <div class="col-sm-10 ">
-        <h3 style="padding-top: 10px; padding-left: 16px;">Discover Top Dishes</h3>
-      <img src="/assets/pic1.png" height="120px" width="260px">
-      <p style="margin-left: 12%;">All</p>
-      <br><br>
-      <h4>Restaurants</h4><br>
-      <div class="row">
-        <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantsList">
-          <img [src]="item.restaurantFeaturedPhotos"  width="100%" height="250px">
-          
-          <img [src]="item.restaurantFeaturedPhotos" width="40px" height="40px" style="float: left;margin-right: 6px;margin-top: 12px;">
-          <p class="paragraph">{{item.restaurantName}}</p> 
-          <p class="aria_parag">{{item.restaurantType}}</p>
-          <ngb-rating [max]="5" [rate]=4  [readonly]="true"></ngb-rating>
+    <h3 class="mt-5 mb-4">Discover {{restaurantsList[0].restaurantBranchs[0]}}</h3>
+    <div class="row" style="margin-left: 7%;">
+      <div class="col-sm-10 ">        
+        <div class="row">
+          <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantsList">
+            <img [src]="item.restaurantFeaturedPhotos" width="100%" height="250px">
+            <img [src]="item.restaurantFeaturedPhotos" width="40px" height="40px"
+              style="float: left;margin-right: 6px;margin-top: 12px;">
+            <p class="paragraph">{{item.restaurantName}}</p>
+            <p class="aria_parag">{{item.restaurantType}}</p>
+            <ngb-rating [max]="5" [rate]=4 [readonly]="true"></ngb-rating>
+          </div>
+
         </div>
-        
-    </div>
-    </div>
-
-
-
-    <!--			 New Restaurants-->
-    <h4 class="mt-5 ml-4"> New Restaurants</h4>
-    <div class="row d-flex justify-content-center">
-      <div class="col-sm-1  ml-4 mt-4">
-        <button style="width: 35px;height: 35px; margin-top: 20%;" class="btn btn-danger rounded-circle" type="button"><i class="fas fa-angle-left"></i>
-        </button>
       </div>
 
-      <div class="col-sm-2" *ngFor="let item of restaurantsList">
-        <img src="{{item.restaurantFeaturedPhotos}}" class="img-fluid" height="auto" width="100%">
-      </div>
-      
-      <div class="col-sm-1  ml-4 mt-4">
-        <button style="width: 35px;height: 35px; margin-top: 20%;" class="btn btn-danger rounded-circle" type="button"><i class="fas fa-angle-right"></i>
-        </button>
-      </div>
+
+
+      <!--			 New Restaurants-->
+      <!-- <h4 class="mt-5 ml-4"> New Restaurants</h4>
+      <div class="row d-flex justify-content-center">
+        <div class="col-sm-1  ml-4 mt-4">
+          <button style="width: 35px;height: 35px; margin-top: 20%;" class="btn btn-danger rounded-circle"
+            type="button"><i class="fas fa-angle-left"></i>
+          </button>
+        </div>
+
+        <div class="col-sm-2" *ngFor="let item of restaurantsList">
+          <img src="{{item.restaurantFeaturedPhotos}}" class="img-fluid" height="auto" width="100%">
+        </div>
+
+        <div class="col-sm-1  ml-4 mt-4">
+          <button style="width: 35px;height: 35px; margin-top: 20%;" class="btn btn-danger rounded-circle"
+            type="button"><i class="fas fa-angle-right"></i>
+          </button>
+        </div>
+      </div> -->
+
+
     </div>
-
-
   </div>
-</div>
