--- a/src/app/Components/gift-meals/gift-meals.component.html
+++ b/src/app/Components/gift-meals/gift-meals.component.html
@@ -4,18 +4,24 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12" style="text-align: left;">
-        <h1>
-          Give the gift of great food
-          to your friends or teams at work
+        <h1 style="font-family: 'MyWebFont', Fallback, sans-serif;">
+          {{'main-header' |translate }}
+          <!-- Give the gift of great food
+          to your friends or teams at work -->
         </h1>
         <hr>
-        <p>We listened to your requests and launched elmenus GiftMeals, a simple way for you to share promos with friends or teams at work so everyone can enjoy great food wherever they are.</p>
+        <p>
+          {{'main-paragraph' | translate}}
+          <!-- We listened to your requests and launched elmenus GiftMeals, a simple way for you to share promos with friends or teams at work so everyone can enjoy great food wherever they are. -->
+        </p>
         <div class="actions" style="justify-content: center;">
           <button routerLink="/Giftmeals-individual" class="btn btn-primary col-lg-6 col-md-6 col-xs-12">
-            Send Gifts to your teams
+            {{'button1'|translate}}
+            <!-- Send Gifts to your teams -->
           </button>
           <button routerLink="/Giftmeals-individual" class="btn btn-outline col-lg-6 col-md-6 col-xs-12">
-            Send Gifts to your friends
+            {{'button2'|translate}}
+            <!-- Send Gifts to your friends -->
           </button>
         </div>
       </div>
@@ -36,7 +42,10 @@
     <div class="row">
       <div class="col-lg">
         <div class="col-md-12">
-          <h1>Bring Happiness To Your Team or to your Friends</h1>
+          <h1>
+            {{'second-header'|translate}}
+            <!-- Bring Happiness To Your Team or to your Friends -->
+          </h1>
           <hr style="margin-left: 43%;">
         </div>
 
@@ -47,8 +56,14 @@
             </div>
 
             <div class="col-md-4 col-xs-12">
-              <h3>Set a gift amount</h3>
-              <p>Set your budget for each GiftMeal (e.g. 10 EGP) and select how many GiftMeals you would like to buy.</p>
+              <h3>
+                {{'setGift'|translate}}
+                <!-- Set a gift amount -->
+              </h3>
+              <p>
+                {{'setGiftText'|translate}}
+                <!-- Set your budget for each GiftMeal (e.g. 10 EGP) and select how many GiftMeals you would like to buy. -->
+              </p>
             </div>
 
             <div class="col-md-2 col-xs-12">
@@ -56,8 +71,14 @@
             </div>
 
             <div class="col-md-4 col-xs-12">
-              <h3>Set a gift amount</h3>
-              <p>Set your budget for each GiftMeal (e.g. 10 EGP) and select how many GiftMeals you would like to buy.</p>
+              <h3>
+                {{'listFriends'|translate}}
+                <!-- List your friends or teams -->
+              </h3>
+              <p>
+                {{'listFriendsText'|translate}}
+                <!-- Set your budget for each GiftMeal (e.g. 10 EGP) and select how many GiftMeals you would like to buy. -->
+              </p>
             </div>
           </div>
 
@@ -67,8 +88,14 @@
             </div>
 
             <div class="col-md-4 col-xs-12">
-              <h3>Pay the full amount online</h3>
-              <p>Once you purchase the GiftMeals, you'll receive a confirmation email and your friends/teams will receive an SMS with the GiftMeal promo code.</p>
+              <h3>
+                {{'pay'|translate}}
+                <!-- Pay the full amount online -->
+              </h3>
+              <p>
+                {{'payText'|translate}}
+                <!-- Once you purchase the GiftMeals, you'll receive a confirmation email and your friends/teams will receive an SMS with the GiftMeal promo code. -->
+              </p>
             </div>
 
             <div class="col-md-2 col-xs-12">
@@ -76,8 +103,14 @@
             </div>
 
             <div class="col-md-4 col-xs-12">
-              <h3>They receive the GiftMeals</h3>
-              <p>The people you gifted can use their personalized GiftMeal promo code via their associated phone number to order great dishes on elmenus.</p>
+              <h3>
+                {{'theyReceive'|translate}}
+                <!-- They receive the GiftMeals -->
+              </h3>
+              <p>
+                {{'theyReceiveText'|translate}}
+                <!-- The people you gifted can use their personalized GiftMeal promo code via their associated phone number to order great dishes on elmenus. -->
+              </p>
             </div>
           </div>
         </div>
