--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -81,6 +81,12 @@
       </li>
       </ul>
       <a href="#" class="cart"><i style="font-size: 24px; " class="fas fa-shopping-cart"></i></a>
+      <select class="form-control" #selectedLang (change)="switchLang(selectedLang.value)">
+        <option *ngFor="let language of translate.getLangs()" [value]="language"
+          [selected]="language === translate.currentLang">
+          {{ language }}
+        </option>
+      </select>
   </div>
 </nav> 
 </div>
