--- a/src/app/Components/pastorders/pastorders.component.html
+++ b/src/app/Components/pastorders/pastorders.component.html
@@ -3,14 +3,14 @@
 <div class="container" [hidden] = "orders == null">
 
     <!-- page title -->
-    <h1 class="page-title">My Orders</h1>
+    <h1 class="page-title">{{'myOrders'|translate}}</h1>
 
     <!-- page content -->
     <div class="container">
         <div class="row">
             <!-- orders tabs -->
             <div class="col-sm-12 col-lg-5 ">
-                <h3 style="color: #ed3c0b;">Previous Orders</h3>
+                <h3 style="color: #ed3c0b;">{{'previousOrders'|translate}}</h3>
 
                 <ul style="list-style: none;" *ngFor="let order of orders">
                     <li class="list-item-order" (click) = "getorderDetails(order.orderId)" >
@@ -23,12 +23,12 @@
                             <h3 class="rest-name" id="rest-name"
                                 style="color: #1f0f10;line-height: 24px;font-size: 16px;">{{order.restaurantName}}</h3>
                             <p>
-                                <span id="quantity-of-item" style="font-size: 13px;">{{order.itemsQuantity}} Items</span><br>
+                                <span id="quantity-of-item" style="font-size: 13px;">{{order.itemsQuantity}} {{'itemsQuantity'|translate}}</span><br>
                                 <span id="order-status" style="font-size: 13px;color: #ed3c0b;"> {{order.orderStatus}} </span>
                                 <strong class="order-price" id="order-price">{{order.totalPrice | currency:'EGP'}}</strong>
                             </p>
                             <p>
-                                <button class="reorder-btn" id="reorder-btn">Reorder</button>
+                                <button class="reorder-btn" id="reorder-btn">{{'reorder'|translate}}</button>
                                 <span id="order-date" style="font-size: 13px;">{{order.orderDate}}</span><br>
                                 <span id="order-id" style="font-size: 13px;">{{order.orderId}}</span>
                             </p>
