--- a/src/app/Components/add-restaurant-dashboard/add-restaurant-dashboard.component.html
+++ b/src/app/Components/add-restaurant-dashboard/add-restaurant-dashboard.component.html
@@ -1,6 +1,6 @@
   <h3 style="color: #E5533A; margin-top: 20px;">Add New Restaurant</h3>
   <br>
-<!--<div class="row">
+<div class="row">
   <div class="col-8 center">
   <div class="form-group">
     <label for="title">restaurantName</label>
@@ -95,10 +95,11 @@
 
   
   </div> 
- 
-</div>-->
+</div>
+<button class="btn btn-dark-moon btn-rounded" (click)="Add()">Save</button>
 
-<div class="row">
+
+<!--<div class="row">
   <div class="col-8 center">
 <form class="needs-validation" [formGroup]="addFrm" 
                           (ngSubmit)="Add()">
@@ -115,7 +116,7 @@
             
             />
           </div>
-          
+          {{restaurant.restaurantName}}
           <div class="form-group">
             <label for="title">restaurantBranchs</label>
             <input
@@ -199,7 +200,7 @@
  
  <button 
  class="btn btn-dark-moon btn-rounded" 
- type="submit" [disabled]="addFrm.invalid">Save</button>
+ type="submit" [disabled]="addFrm.invalid">Save</button>-->
 <!--<button class="btn btn-dark-moon btn-rounded" (click)="Add()">Save</button>-->
 
 
