--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -11,10 +11,12 @@
         <hr><br>
         <ul>
         <li routerLinkActive="active"><a [routerLink]="['/overviewdashboard']" ><i class="fas fa-home"></i> Overview </a></li>
-        <li routerLinkActive="active"><a [routerLink]="['/noorder']"><i class="fas fa-utensils"></i> Orders</a></li>
-        <li routerLinkActive="active"><a [routerLink]="['/showrestaurants']" style="font-size: 24px;"><i class="fas fa-user-friends"></i> Restaurants</a></li>
-        <li><a href="#"><i class="fas fa-chart-line"></i> Charts</a></li>
-        <li><a href="#"><i class="fas fa-envelope"></i> Messages</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/orderlist']"><i class="fas fa-pizza-slice"></i> Orders</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/showrestaurants']" style="font-size: 24px;"><i class="fas fa-utensils"></i> Restaurants</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/addrestaurant']"><i class="fas fa-calendar-plus"></i> Add Restaurant</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/menulist']"><i class="fas fa-list-alt"></i> Menu List</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/customerlist']"><i class="fas fa-user-friends"></i> Customers</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/reviewlist']"><i class="fas fa-comment-alt"></i> Reviews</a></li>
         <li><a href="#"><i class="fas fa-cogs"></i> Settings</a></li>
         <li><a href="#"><i class="fas fa-power-off"></i> Logout</a></li>
     </ul>
