--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -38,11 +38,11 @@
   {
   margin-left:4px;
   border: 1px solid #E5533A;
-  border-radius: 20px;
+  /*border-radius: 20px;*/
   color: white;
   height: 30px;
   padding: 0;
-  width: 80px;
+  width: 85px;
   background-color: #E5533A !important;
   }
 
