--- a/src/app/Components/show-restaurants-dashboard/show-restaurants-dashboard.component.html
+++ b/src/app/Components/show-restaurants-dashboard/show-restaurants-dashboard.component.html
@@ -30,7 +30,7 @@
         <br />
         <!--<p>Show Restaurant Details</p>-->
       </div>
-      <button class="btn btn-dark-moon btn-rounded" (click)="addrestaurant()">Add New Restaurant</button>
+      <!--<button class="btn btn-dark-moon btn-rounded" (click)="addrestaurant()">Add New Restaurant</button>-->
 
     </div>
   </div>
