--- a/src/app/Components/delivery/delivery.component.html
+++ b/src/app/Components/delivery/delivery.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <!-----------Left Side--------------------------->
       <div class="col-sm-2 right-delivery" style="flex-wrap: wrap;">
-        <h4 style="padding-top: 15px;margin-bottom: 15%;" class="gray-col">Show results for:</h4>
+        <h4 style="padding-top: 15px;margin-bottom: 15%;" class="gray-col">{{'show result' | translate}}</h4>
         <div style="float: left;">
         <label class="switch">
           <input type="checkbox" #inputEl (change)="onChange(inputEl.checked)">
@@ -11,29 +11,29 @@
         </label>
       </div>
       <div>
-        <p class="gray-col" style="font-size: 16px;padding-left: 40px;line-height: 1.5;">Online ordering only
-          unavailable in St. Mohamed Tawfik
-          right now</p>
+        <p class="gray-col" style="font-size: 16px;padding-left: 40px;line-height: 1.5;">
+          {{'orderOnline' | translate}} 
+        </p>
       </div>
           <hr>
         
-          <input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">Open Now</span>
-          <br><input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">Promo</span>
-          <br><input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;"> Hygiene Check</span>
+          <input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'openNow'|translate}}</span>
+          <br><input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'promo'|translate}}</span>
+          <br><input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;"> {{'check' |translate}}</span>
           <hr>
-          <h4 class="gray-col">Sort by:</h4><br>
-       <input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">Popular</span>
-       <br><input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">Rating</span>
-       <br><input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">Delivery Time</span>
+          <h4 class="gray-col">{{'sortBy'|translate}}</h4><br>
+       <input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'popular' |translate}}</span>
+       <br><input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'rating' |translate}}</span>
+       <br><input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'Delivery Time' |translate}}</span>
         <hr>
-    </div>
+    </div> 
       <!-----------right Side--------------------------->
       <div class="col-sm-10 ">
-        <h3 style="padding-top: 10px; padding-left: 16px;">Discover Top Dishes</h3>
+        <h3 style="padding-top: 10px; padding-left: 16px;">{{'head delivery' | translate}} </h3>
       <img src="/assets/pic1.png" height="120px" width="260px">
-      <p style="margin-left: 12%;">All</p>
+      <p style="margin-left: 12%;">{{'all' | translate}}</p>
       <br><br>
-      <h4>Restaurants <sub>({{number_of_restaurants}})</sub></h4><br>
+      <h4>{{'restaurants' | translate}} <sub>({{number_of_restaurants}})</sub></h4><br>
       <div class="row">
         <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantList">
           <img [src]="item.restaurantFeaturedPhotos" (click)="goRestaurant(item.id)" width="100%" height="250px">
