--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <!-- <router-outlet></router-outlet> -->
 
 <!-- <app-header></app-header> -->
-<div>
+<!--<div>
     <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<app-footer></app-footer>-->
 
 <!-- <app-delivery></app-delivery> -->
 
-<!--<app-dashboard></app-dashboard> -->
+<app-dashboard></app-dashboard>
+
 <!--<app-change-email></app-change-email> -->
 <!--<app-change-password></app-change-password> -->
 <!--<app-address-book></app-address-book> -->
