add list to local storage

--- a/src/app/Components/checkout/checkout.component.html
+++ b/src/app/Components/checkout/checkout.component.html
@@ -81,7 +81,7 @@
                 <!--Checkout_form-->
                 <div class="gift-steps-cntnt">
                     <form class="needs-validation" [formGroup]="checkoutFrm" 
-                          (ngSubmit)="submitCheckout()">
+                          (ngSubmit)="saveOrder()">
 
                         <div class="form-row text-left">
                             <!--		  Name-->
