dashboard fixed sidebar

--- a/src/app/Components/add-restaurant-dashboard/add-restaurant-dashboard.component.html
+++ b/src/app/Components/add-restaurant-dashboard/add-restaurant-dashboard.component.html
@@ -1,3 +1,4 @@
+  <div class="container">
   <h3 style="color: #E5533A; margin-top: 20px;">Add New Restaurant</h3>
   <br>
 <div class="row">
@@ -98,7 +99,7 @@
 </div>
 <button class="btn btn-dark-moon btn-rounded" (click)="Add()">Save</button>
 
-
+</div>
 <!--<div class="row">
   <div class="col-8 center">
 <form class="needs-validation" [formGroup]="addFrm" 
