--- a/src/app/Components/dashboard/dashboard.component.scss
+++ b/src/app/Components/dashboard/dashboard.component.scss
@@ -37,7 +37,15 @@ margin-top: 4%;
 {
     background-color: #E5533A;
     width: 100%;
-    height: 900px;
+    /*height: 900px;*/
+
+    height: 100%;
+  /*position: fixed;
+  z-index: 1
+  top: 20;
+  /*left: 0;
+  overflow-x: hidden;
+  padding-top: 20px;*/
 }
 .right_side img{
     padding-top: 10px;
@@ -82,8 +90,68 @@ color: white;
 .right_side .fas
 {
     margin-right: 5px;
+    color: white;
+    font-size: 22px;
 }
 /*********** End Left Side **************************************/
 
 /*********** Start right Side ******************************************************/
 
+/*.right{
+   width:100%;
+}*/
+
+.sidebar {
+    position: fixed;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    padding: 20px 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    border-right: 1px solid #eee;
+    width: 250px;
+  }
+  
+  .sidebar .nav-item {
+    width: 100%;
+  }
+  
+  
+  @media (min-width: 250px) {
+      .ml-sm-auto, .mx-sm-auto {
+      margin-left: auto !important;
+  }}
+  
+  @media (max-width: 920px) {
+    .right_side ul li a{
+        display: none;
+            
+            }
+            .sidebar{
+                width:50px !important;
+                top: 30px;
+            }
+            .sidebar img , .sidebar h3{
+                display: none;
+            }
+            .main{
+                margin-left: 19px !important;
+            }
+
+}
+
+@media (min-width:921px) and (max-width:1290px){
+    .right_side ul li a{
+        font-size: 18px !important;
+            
+            }
+            h3{
+                font-size: 20px;
+                margin-left: 14px  !important;
+            }
+            .fas{
+                font-size: 15px !important;
+            }
+}
