--- a/src/app/Components/show-restaurants-dashboard/show-restaurants-dashboard.component.html
+++ b/src/app/Components/show-restaurants-dashboard/show-restaurants-dashboard.component.html
@@ -1,4 +1,5 @@
 
+<div class="container">
 <h2 style="color: #E5533A; margin-top: 20px;">All Restaurants</h2>
 <br><br>
 <div class="list row">
@@ -34,3 +35,4 @@
 
     </div>
   </div>
+</div>
