--- a/src/app/Components/menulist-dashboard/menulist-dashboard.component.html
+++ b/src/app/Components/menulist-dashboard/menulist-dashboard.component.html
@@ -1,23 +1,81 @@
-<div class="container-fluid">
-         <h2 style="color: #E5533A; margin-top: 40px;">Menu List</h2>
-        <br><br>
-        <div class="ff">
-          <div style="margin-bottom: 30px; margin-left: 46px;" *ngFor="let item of MenuList">
-            <div class="card">
-              <img [src]="item.dishImage" width="100%" height="220px">
-              <div class="info">
-                <h4 style="flex-grow: 3;" class="paragraph">{{item.dishName}}</h4> 
-                <p style="flex-grow: 1;" class="btn">{{item.dishPrice}} EGP</p>
-              </div>
-              <p class="description">{{item.dishDescription}}</p>
-
+<div *ngIf="!currentMenu" class="container-fluid">
+  <div class="jumbotron p-3 mt-5">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 style="color: #e5533a">Menu List</h2>
+      </div>
+      <div class="col-md-6 text-right mt-1">
+        <button (click)="addMenu()" type="button" class="btn btn-primary mr-2">
+          Add Menu
+        </button>
+      </div>
+    </div>
+  </div>
+  <br /><br />
+  <div class="ff">
+    <div
+      style="margin-bottom: 30px; margin-left: 46px"
+      *ngFor="let item of MenuList"
+    >
+      <!-- Card -->
+      <div class="card mb-3">
+        <div class="card-header">
+          <div class="info">
+            <h4 style="flex-grow: 3" class="paragraph">{{ item.dishName }}</h4>
+            <p class="price">{{ item.dishPrice }} EGP</p>
           </div>
         </div>
+
+        <img [src]="item.dishImage" width="100%" height="220px" />
+
+        <div class="card-body">
+          <p class="card-text">
+            {{ item.dishDescription }}
+          </p>
+        </div>
+
+        <div class="card-footer text-muted text-right">
+          <button
+            (click)="updateMenu(item.id, item)"
+            type="button"
+            class="btn btn-primary d-inline mr-2"
+          >
+            update
+          </button>
+          <button
+            (click)="deleteMenu(item.id)"
+            type="button"
+            class="btn btn-primary d-inline"
+          >
+            delete
+          </button>
+        </div>
       </div>
-     </div>
-    
+
+      <!-- Card -->
+      <!-- <div class="card">
+        <img [src]="item.dishImage" width="100%" height="220px" />
 
 
+            <button type="submit" class="btn btn-info">edit</button>
+
+
+        <div class="info">
+          <h4 style="flex-grow: 3" class="paragraph">{{ item.dishName }}</h4>
+          <p style="flex-grow: 1" class="btn">{{ item.dishPrice }} EGP</p>
+        </div>
+        <p class="description">{{ item.dishDescription }}</p>
+      </div> -->
+    </div>
+  </div>
+</div>
+
+<app-menu-details-dashboard
+  *ngIf="currentMenu"
+  [menu]="currentMenu"
+  [menuId]="menuId"
+  (refreshList)="refreshList()"
+></app-menu-details-dashboard>
 <!--
   <div class="container-fluid">
          <h2 style="color: #E5533A; margin-top: 20px;">Menu List</h2>
@@ -38,6 +96,3 @@
      </div>
 
   --->
-
-
-
