--- a/src/app/Components/menulist-dashboard/menulist-dashboard.component.scss
+++ b/src/app/Components/menulist-dashboard/menulist-dashboard.component.scss
@@ -1,40 +1,63 @@
-.card{
-    background-color: #E5533A;
-    height: 350px;
-    width: 360px;
-    border: none;
-    border-radius: 0px 0px 30px 30px;
+// .card {
+//   background-color: #e5533a;
+//   height: 350px;
+//   width: 360px;
+//   border: none;
+//   border-radius: 0px 0px 30px 30px;
+// }
+.card {
+  height: 510px;
+  width: 360px;
+  border-radius: 30px 30px 0px 0px;
+}
+.card-header {
+  background-color: #e5533a;
+  border: none;
+  border-radius: 30px 30px 0px 0px;
 }
 
-.info{
-    display: flex;
-    flex-direction: row;
-    padding: 15px;
-    color: white;
-    padding-bottom: 0px;
-    flex-grow: 100px;
+.price {
+  padding: 9px !important;
+  height: 40px !important;
+  background-color: white;
+  color: #e5533a;
+  font-size: 15px;
+  font-weight: bold;
 }
 
-.description{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-   padding: 5px;
+.info {
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+  color: white;
+  padding-bottom: 0px;
+  flex-grow: 100px;
 }
 
-.btn{
-    width:20px !important;
-    padding: 0 !important;
-    height: 40px !important;
-    background-color: white;
-    color: #E5533A;
-    font-size: 15px;
-    font-weight: bold;
-
+.description {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
 }
 
-.ff{
-    display: flex ;
-    flex-direction: row;
-    flex-wrap: wrap ;
+// .btn {
+//   width: 20px !important;
+//   padding: 0 !important;
+//   height: 40px !important;
+//   background-color: white;
+//   color: #e5533a;
+//   font-size: 15px;
+//   font-weight: bold;
+// }
+
+.ff {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.btn {
+  background-color: #e5533a;
+  border: none;
 }
